[gd_scene load_steps=11 format=3 uid="uid://d2xm61qefcbfw"]

[ext_resource type="Script" path="res://Scenes/GameObject/FightApproach/fight_approach.gd" id="1_temh4"]
[ext_resource type="PackedScene" uid="uid://cgjxsj2p8ktvh" path="res://Scenes/GameObject/FightApproach/key_input.tscn" id="2_ebg38"]
[ext_resource type="PackedScene" uid="uid://c3jn30n5mhf0i" path="res://Scenes/GameObject/FightApproach/key_enter_area.tscn" id="2_nvmxp"]
[ext_resource type="AudioStream" uid="uid://wbl1e5hwi0dp" path="res://Assets/Sounds/Effects/heart_beat.wav" id="4_22cer"]
[ext_resource type="PackedScene" uid="uid://cgj1c856i77vv" path="res://Scenes/GameObject/Player/player.tscn" id="4_praoy"]

[sub_resource type="Animation" id="Animation_kc1nk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 800)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7v8jb"]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(640, 800), Vector2(640, 360)]
}

[sub_resource type="Animation" id="Animation_w4gtp"]
resource_name = "fail"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(4, 1),
"update": 0,
"values": [Vector2(640, 360), Vector2(-50, 650)]
}

[sub_resource type="Animation" id="Animation_vjggk"]
resource_name = "success"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.6, 2.14355, 1),
"update": 0,
"values": [Vector2(640, 360), Vector2(640, 360), Vector2(1400, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2s4ql"]
_data = {
"RESET": SubResource("Animation_kc1nk"),
"enter": SubResource("Animation_7v8jb"),
"fail": SubResource("Animation_w4gtp"),
"success": SubResource("Animation_vjggk")
}

[node name="FightApproach" type="Node2D"]
script = ExtResource("1_temh4")
key_input_scene = ExtResource("2_ebg38")

[node name="Player" parent="." instance=ExtResource("4_praoy")]
position = Vector2(640, 800)
scale = Vector2(0.7, 0.7)

[node name="Background" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 160)
offset_top = 560.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="KeyRail" type="ColorRect" parent="Background"]
visible = false
custom_minimum_size = Vector2(1280, 1)
layout_mode = 0
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 81.0
pivot_offset = Vector2(2.08165e-12, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background"]

[node name="KeyInputLayer" type="Node2D" parent="." groups=["key_input_layer"]]

[node name="KeyEnterArea" parent="." instance=ExtResource("2_nvmxp")]
position = Vector2(640, 360)
scale = Vector2(2.5, 2.5)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_22cer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2s4ql")
}
autoplay = "enter"

[node name="KeyPauseTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
